Api Status Check

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -7,13 +7,14 @@
     <title>LIBRARY REGISTER SERVER</title>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/library-register-server.js"></script>
-    
 </head>
 <body>
     <h2>LIBRARY REGISTER SERVER</h2>
     <p>Author: <a href="https://github.com/Zneiat" target="_blank">ZNEIAT</a><br/>Project-Name: zneiat/library-register-server<br/>Powered-By: PHP, slim/slim
 </p>
     <button onclick="updateAll();">Update All</button>
+    <h2>Status</h2>
+    <ul id="StatusList"></ul>
     <h2>Server Time</h2>
     <code id="ServerTime"></code>
     <h2>Downloads</h2>
