--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -19,11 +19,11 @@
     <!-- HelloScreen -->
     <div class="hello-screen" id="helloScreen">
         <div class="big-title-text">
-            <h2>書記 Online</h2>
+            <span style="color: #2196f3;margin-right: 13px;">書記</span><span style="font-size: 13px">Online</span>
         </div>
         <form class="hello-form" id="helloForm">
             <p class="input-hint">填入你的名字，成为一名名副其实的图书登记员吧！</p>
-            <input type="text" id="yourName" class="form-control" placeholder="Your Name. 填入你的真实名字." required autocomplete="off" autofocus />
+            <input type="text" id="yourName" class="form-control" placeholder="Your Name ? 填入你的真实名字." required autocomplete="off" />
             <button class="hello-form-submit">好的</button>
         </form>
     </div>
