--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -18,30 +18,20 @@
 <body>
     <!-- HelloScreen -->
     <div class="hello-screen" id="helloScreen">
-        <div class="big-title-text">
-            <span style="color: #2196f3;margin-right: 13px;">書記</span><span style="font-size: 13px">Online</span>
+        <div class="hello-head" id="helloHead">
+            <div class="big-title">
+                <span style="color: #2196f3;margin-right: 13px;">書記</span><span style="font-size: 13px">Online</span>
+            </div>
+            <div class="right-part" style="display: none">
+                <span class="your-name"><i class="zmdi zmdi-account"></i><span id="registrarName"></span></span>
+            </div>
         </div>
-        <form class="hello-form" id="helloForm">
+        <form class="hello-form" id="helloForm" onsubmit="return false;">
             <p class="input-hint">填入你的名字，成为一名名副其实的图书登记员吧！</p>
-            <input type="text" id="yourName" class="form-control" placeholder="Your Name ? 填入你的真实名字." required autocomplete="off" />
+            <input type="text" id="yourName" class="form-control" placeholder="Your Name ? 填入你的真实名字." autofocus autocomplete="off" />
             <button class="hello-form-submit">好的</button>
         </form>
-    </div>
-    <!-- CategoryList -->
-    <div class="category-list-wrap" id="categoryListLayer" style="display: none">
-         <div class="category-list" id="categoryList">
-             <div class="list-head">
-                 <span class="list-title">图书类目列表</span>
-                 <span class="close-btn zmdi zmdi-close" onclick="app.categoryList.hide();"></span>
-             </div>
-             <div class="list-body">
-                 <div class="list-toolbar">
-                     <span onclick="app.categoryList.createCategory();">新建类目</span>
-                 </div>
-                 <div class="list-loading" id="categoryListLoading">正在加载中...</div>
-                 <div class="list-content" id="categoryListContent"></div>
-             </div>
-        </div>
+        <div class="hello-category-list-wrap" id="helloCategorySelectorWrap"></div>
     </div>
     <!-- WorkArea -->
     <div class="work-area" id="workArea" style="display: none">
