--- a/public/handsontable/handsontable.full.css
+++ b/public/handsontable/handsontable.full.css
@@ -1,27 +1,30 @@
 /*!
- * Copyright (c) Handsoncode sp. z o.o.
+ * (The MIT License)
  * 
- * This Handsontable Pro is a commercial software distributed by Handsoncode sp. z o. o., a limited liability
- * company registered under the laws of Poland, with its registered office in Gdynia, Poland, at 96/98 Aleja Zwycięstwa,
- * postal code 81-451, entered into the Entrepreneurs Register of the National Court Register under number 0000538651,
- * share capital: PLN 62,800.00., hereinafter referred to as "HANDSONCODE".
+ * Copyright (c) 2012-2014 Marcin Warpechowski
+ * Copyright (c) 2015 Handsoncode sp. z o.o. <hello@handsoncode.net>
  * 
- * By installing, copying, or otherwise using this software, you agree to be bound by the terms
- * of its General Software License Terms ("Terms") outlined in a file "handsontable-pro-general-terms.pdf"
- * available in the main directory of the software repository.
- * This software is copyrighted and protected by copyright laws and international treaties.
+ * Permission is hereby granted, free of charge, to any person obtaining
+ * a copy of this software and associated documentation files (the
+ * 'Software'), to deal in the Software without restriction, including
+ * without limitation the rights to use, copy, modify, merge, publish,
+ * distribute, sublicense, and/or sell copies of the Software, and to
+ * permit persons to whom the Software is furnished to do so, subject to
+ * the following conditions:
  * 
- * You shall obtain a commercial license for this software at handsontable.com.
+ * The above copyright notice and this permission notice shall be
+ * included in all copies or substantial portions of the Software.
  * 
- * YOU EXPRESSLY ACKNOWLEDGE AND AGREE THAT USE OF THE SOFTWARE IS AT YOUR OWN RISK AND THAT THE SOFTWARE
- * IS PROVIDED "AS IS" WITHOUT ANY WARRANTIES OR CONDITIONS WHATSOEVER. HANDSONCODE EXPRESSLY DISCLAIMS ANY WARRANTY,
- * EXPRESS OR IMPLIED, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGMENT. HANDSONCODE DOES NOT WARRANT THAT THE SOFTWARE AND ITS FUNCTIONALITY,
- * RELIABILITY AND PERFORMANCE WILL MEET YOUR REQUIREMENTS OR THAT THE OPERATION OF THE SOFTWARE WILL BE
- * UNINTERRUPTED OR ERROR FREE.
+ * THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
+ * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+ * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+ * IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+ * CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+ * TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+ * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  * 
- * Version: 1.14.3
- * Release date: 12/10/2017 (built at 12/10/2017 10:04:38)
+ * Version: 0.34.5
+ * Release date: 12/10/2017 (built at 12/10/2017 10:04:29)
  */
 /**
  * Fix for bootstrap styles
@@ -1500,530 +1503,4 @@ textarea#HandsontableCopyPaste {
 .handsontable.on-moving--rows.show-ui .ht__manualRowMove--guideline,
 .handsontable.on-moving--rows .ht__manualRowMove--backlight {
   display: block;
-}
-/*!
- * Handsontable DropdownMenu
- */
-.handsontable .changeType {
-  background: #eee;
-  border-radius: 2px;
-  border: 1px solid #bbb;
-  color: #bbb;
-  font-size: 9px;
-  line-height: 9px;
-  padding: 2px;
-  margin: 3px 1px 0 5px;
-  float: right;
-}
-.handsontable .changeType:before {
-  content: '\25BC   ';
-}
-
-.handsontable .changeType:hover {
-  border: 1px solid #777;
-  color: #777;
-  cursor: pointer;
-}
-
-.htDropdownMenu {
-  display: none;
-  position: absolute;
-  z-index: 1060; /* needs to be higher than 1050 - z-index for Twitter Bootstrap modal (#1569) */
-}
-
-.htDropdownMenu .ht_clone_top,
-.htDropdownMenu .ht_clone_left,
-.htDropdownMenu .ht_clone_corner,
-.htDropdownMenu .ht_clone_debug {
-  display: none;
-}
-
-.htDropdownMenu table.htCore {
-  border: 1px solid #bbb;
-  border-bottom-width: 2px;
-  border-right-width: 2px;
-}
-
-.htDropdownMenu .wtBorder {
-  visibility: hidden;
-}
-
-.htDropdownMenu table tbody tr td {
-  background: white;
-  border-width: 0;
-  padding: 4px 6px 0 6px;
-  cursor: pointer;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.htDropdownMenu table tbody tr td:first-child {
-  border: 0;
-}
-
-.htDropdownMenu table tbody tr td.htDimmed {
-  font-style: normal;
-  color: #323232;
-}
-
-.htDropdownMenu table tbody tr td.current,
-.htDropdownMenu table tbody tr td.zeroclipboard-is-hover {
-  background: #e9e9e9;
-}
-
-.htDropdownMenu table tbody tr td.htSeparator {
-  border-top: 1px solid #bbb;
-  height: 0;
-  padding: 0;
-  cursor: default;
-}
-
-.htDropdownMenu table tbody tr td.htDisabled {
-  color: #999;
-}
-
-.htDropdownMenu table tbody tr td.htDisabled:hover {
-  background: #fff;
-  color: #999;
-  cursor: default;
-}
-
-.htDropdownMenu table tbody tr.htHidden {
-  display: none;
-}
-
-.htDropdownMenu table tbody tr td .htItemWrapper {
-  margin-left: 10px;
-  margin-right: 6px;
-}
-
-.htDropdownMenu table tbody tr td div span.selected {
-  margin-top: -2px;
-  position: absolute;
-  left: 4px;
-}
-
-.htDropdownMenu .ht_master .wtHolder {
-  overflow: hidden;
-}
-/*!
- * Handsontable Filters
- */
-
-/* Conditions menu */
-.htFiltersConditionsMenu {
-  display: none;
-  position: absolute;
-  z-index: 1070;
-}
-
-.htFiltersConditionsMenu .ht_clone_top,
-.htFiltersConditionsMenu .ht_clone_left,
-.htFiltersConditionsMenu .ht_clone_corner,
-.htFiltersConditionsMenu .ht_clone_debug {
-  display: none;
-}
-
-.htFiltersConditionsMenu table.htCore {
-  border: 1px solid #bbb;
-  border-bottom-width: 2px;
-  border-right-width: 2px;
-}
-
-.htFiltersConditionsMenu .wtBorder {
-  visibility: hidden;
-}
-
-.htFiltersConditionsMenu table tbody tr td {
-  background: white;
-  border-width: 0;
-  padding: 4px 6px 0 6px;
-  cursor: pointer;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.htFiltersConditionsMenu table tbody tr td:first-child {
-  border: 0;
-}
-
-.htFiltersConditionsMenu table tbody tr td.htDimmed {
-  font-style: normal;
-  color: #323232;
-}
-
-.htFiltersConditionsMenu table tbody tr td.current,
-.htFiltersConditionsMenu table tbody tr td.zeroclipboard-is-hover {
-  background: #e9e9e9;
-}
-
-.htFiltersConditionsMenu table tbody tr td.htSeparator {
-  border-top: 1px solid #bbb;
-  height: 0;
-  padding: 0;
-}
-
-.htFiltersConditionsMenu table tbody tr td.htDisabled {
-  color: #999;
-}
-
-.htFiltersConditionsMenu table tbody tr td.htDisabled:hover {
-  background: #fff;
-  color: #999;
-  cursor: default;
-}
-
-.htFiltersConditionsMenu table tbody tr td .htItemWrapper {
-  margin-left: 10px;
-  margin-right: 6px;
-}
-
-.htFiltersConditionsMenu table tbody tr td div span.selected {
-  margin-top: -2px;
-  position: absolute;
-  left: 4px;
-}
-
-.htFiltersConditionsMenu .ht_master .wtHolder {
-  overflow: hidden;
-}
-
-.handsontable .htMenuFiltering {
-  border-bottom: 1px dotted #ccc;
-  height: 135px;
-  overflow: hidden;
-}
-
-.handsontable .ht_master table td.htCustomMenuRenderer {
-  background-color: #fff;
-  cursor: auto;
-}
-
-/* Menu label */
-.handsontable .htFiltersMenuLabel {
-  font-size: 12px;
-}
-
-/* Component action bar */
-.handsontable .htFiltersMenuActionBar {
-  text-align: center;
-}
-
-/* Component filter by conditional */
-.handsontable .htFiltersMenuCondition.border {
-  border-bottom: 1px dotted #ccc !important;
-}
-.handsontable .htFiltersMenuCondition .htUIInput {
-  padding: 0 0 5px 0;
-}
-.handsontable .htFiltersMenuCondition .htUIInput input {
-  width: 159px;
-  padding: 4px;
-  margin-left: -4px;
-}
-
-/* Component filter by value */
-.handsontable .htFiltersMenuValue {
-  border-bottom: 1px dotted #ccc !important;
-}
-.handsontable .htFiltersMenuValue .htUIMultipleSelectSearch {
-  padding: 0;
-}
-.handsontable .htFiltersMenuValue .htUIMultipleSelectSearch input {
-  width: 159px;
-  padding: 4px;
-  margin-left: -4px;
-}
-
-.htUIMultipleSelect .ht_master .wtHolder {
-  overflow-y: scroll;
-}
-
-.handsontable .htFiltersActive .changeType {
-  border: 1px solid #509272;
-  color: #18804e;
-  background-color: #d2e0d9;
-}
-
-.handsontable .htUIClearAll, .handsontable .htUISelectAll {
-  display: inline-block;
-  margin: 0 5px;
-}
-.handsontable .htUIClearAll a, .handsontable .htUISelectAll a {
-  color: #3283D8;
-  font-size: 12px;
-}
-.handsontable .htUISelectionControls {
-  text-align: right;
-}
-
-.handsontable .htCheckboxRendererInput {
-  margin: 0 5px 0 0;
-  vertical-align: middle;
-  height: 1em;
-}
-
-
-/* UI elements */
-/* Input */
-.handsontable .htUIInput {
-  padding: 3px 0 7px 0;
-  position: relative;
-  text-align: center;
-}
-.handsontable .htUIInput input {
-  border-radius: 2px;
-  border: 1px solid #d2d1d1;
-}
-.handsontable .htUIInput input:focus {
-  outline: 0;
-}
-.handsontable .htUIInputIcon {
-  position: absolute;
-}
-
-/* Button */
-.handsontable .htUIInput.htUIButton {
-  cursor: pointer;
-  display: inline-block;
-  padding: 3px 4px 7px 4px;
-  width: 60px;
-}
-.handsontable .htUIInput.htUIButton input {
-  background-color: #eee;
-  color: #000;
-  cursor: pointer;
-  font-family: arial, sans-serif;
-  font-size: 11px;
-  font-weight: bold;
-  height: 19px;
-  width: 42px;
-}
-.handsontable .htUIInput.htUIButton input:hover {
-  border-color: #b9b9b9;
-}
-
-.handsontable .htUIInput.htUIButtonOK input {
-  background-color: #0f9d58;
-  border-color: #18804e;
-  color: #fff;
-}
-.handsontable .htUIInput.htUIButtonOK input:hover {
-  border-color: #1a6f46;
-}
-
-/* Select */
-.handsontable .htUISelect {
-  cursor: pointer;
-  margin-bottom: 7px;
-  padding: 0 2px 0 0;
-  position: relative;
-  width: 169px;
-}
-.handsontable .htUISelectCaption {
-  background-color: #e8e8e8;
-  border-radius: 2px;
-  border: 1px solid #d2d1d1;
-  font-family: arial, sans-serif;
-  font-size: 11px;
-  font-weight: bold;
-  padding: 3px 0 3px 10px;
-}
-.handsontable .htUISelectCaption:hover {
-  background-color: #e8e8e8;
-  border: 1px solid #b9b9b9;
-}
-.handsontable .htUISelectDropdown:after {
-  content: '\25B2';
-  font-size: 7px;
-  position: absolute;
-  right: 10px;
-  top: 0;
-}
-.handsontable .htUISelectDropdown:before {
-  content: '\25BC';
-  font-size: 7px;
-  position: absolute;
-  right: 10px;
-  top: 8px;
-}
-
-/* SelectMultiple */
-.handsontable .htUIMultipleSelect .handsontable .htCore {
-  border: none;
-}
-.handsontable .htUIMultipleSelect .handsontable .htCore td:hover {
-  background-color: #F5F5F5;
-}
-
-.handsontable .htUIMultipleSelectSearch input {
-  border-radius: 2px;
-  border: 1px solid #d2d1d1;
-  padding: 3px;
-  width: 161px;
-}
-
-.handsontable .htUIRadio {
-  display: inline-block;
-  margin: 0 5px 0px 0;
-  height: 100%;
-}
-
-.handsontable .htUIRadio > input[type=radio] {
-  margin-right: 0.5ex;
-}
-
-.handsontable .htFiltersMenuOperators {
-  padding-bottom: 5px;
-}
-.handsontable.ganttChart tr:first-child th div.relative {
-  padding-right: 21px;
-}
-.handsontable.ganttChart .colHeader {
-  display: block;
-}
-.handsontable.ganttChart td.rangeBar {
-  background: #48b703;
-  border-right-width: 0;
-  position: relative;
-  -webkit-box-shadow: inset 0 3px 0 #ffffff;
-  -moz-box-shadow: inset 0 3px 0 #ffffff;
-  box-shadow: inset 0 3px 0 #ffffff;
-}
-.handsontable.ganttChart td.rangeBar.last {
-  border-right-width: 1px;
-}
-.handsontable.ganttChart td.rangeBar.area {
-  background: #7EC481;
-}
-.handsontable.ganttChart td.rangeBar.partial {
-  background: #8edf5a;
-}
-.handsontable.ganttChart td.rangeBar.area.partial {
-  background: #A1D8AD;
-}
-.handsontable thead th.hiddenHeader:not(:first-of-type) {
-  display: none;
-}
-.handsontable th.ht_nestingLevels {
-    text-align: left;
-    padding-left: 7px;
-}
-
-.handsontable th div.ht_nestingLevels {
-    display: inline-block;
-    position: absolute;
-    left: 11px;
-}
-
-.handsontable.innerBorderLeft th div.ht_nestingLevels,
-.handsontable.innerBorderLeft ~ .handsontable th div.ht_nestingLevels {
-    right: 10px;
-}
-
-.handsontable th span.ht_nestingLevel {
-    display: inline-block;
-}
-
-.handsontable th span.ht_nestingLevel_empty {
-    display: inline-block;
-    width: 10px;
-    height: 1px;
-    float: left;
-}
-
-.handsontable th span.ht_nestingLevel::after {
-    content: "\2510";
-    font-size: 9px;
-    display: inline-block;
-    position: relative;
-    bottom: 3px;
-}
-
-
-.handsontable th div.ht_nestingButton {
-    display: inline-block;
-    position: absolute;
-    right: -2px;
-    cursor: pointer;
-}
-
-.handsontable th div.ht_nestingButton.ht_nestingExpand::after {
-    content: "+";
-}
-
-.handsontable th div.ht_nestingButton.ht_nestingCollapse::after {
-    content: "-";
-}
-
-.handsontable.innerBorderLeft th div.ht_nestingButton,
-.handsontable.innerBorderLeft ~ .handsontable th div.ht_nestingButton {
-    right: 0;
-}/*
- * Handsontable HiddenColumns
- */
-.handsontable th.beforeHiddenColumn {
-  position: relative;
-}
-
-.handsontable th.beforeHiddenColumn::after,
-.handsontable th.afterHiddenColumn::before {
-  color: #bbb;
-  position: absolute;
-  top: 50%;
-  font-size: 5pt;
-  transform: translateY(-50%);
-}
-
-.handsontable th.afterHiddenColumn {
-  position: relative;
-}
-.handsontable th.beforeHiddenColumn::after {
-  right: 1px;
-  content: '\25C0';
-}
-.handsontable th.afterHiddenColumn::before {
-  left: 1px;
-  content: '\25B6';
-}
-
-.handsontable td.firstVisibleColumn,
-.handsontable th.firstVisibleColumn {
-  border-left: 1px solid #CCC;
-}
-/*!
- * Handsontable HiddenRows
- */
-.handsontable th.beforeHiddenRow::before,
-.handsontable th.afterHiddenRow::after {
-  color: #bbb;
-  font-size: 6pt;
-  line-height: 6pt;
-  position: absolute;
-  left: 2px;
-}
-
-.handsontable th.beforeHiddenRow,
-.handsontable th.afterHiddenRow {
-  position: relative;
-}
-
-.handsontable th.beforeHiddenRow::before {
-  content: '\25B2';
-  bottom: 2px;
-}
-
-.handsontable th.afterHiddenRow::after {
-  content: '\25BC';
-  top: 2px;
-}
-.handsontable.ht__selection--rows tbody th.beforeHiddenRow.ht__highlight:before,
-.handsontable.ht__selection--rows tbody th.afterHiddenRow.ht__highlight:after {
-  color: #eee;
-}
-.handsontable td.afterHiddenRow.firstVisibleRow,
-.handsontable th.afterHiddenRow.firstVisibleRow {
-  border-top: 1px solid #CCC;
 }
