Basic actions are all finished

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -38,7 +38,7 @@
         <div class="work-table" id="workTable"></div>
         <div class="floaters">
             <div class="floater-block block-hide">
-                <span>书记 Online</span>
+                <button onclick="app.work.saveCurrent();">保存</button>
             </div>
         </div>
     </div>
