--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,11 @@ body {
     background-color: #f3f3f3;
 }
 
+a {
+    text-decoration: none !important;
+    transition: all .2s ease-in-out;
+}
+
 /* anim */
 .anim-fade-in {
     -webkit-animation-name: fadeIn;
@@ -17,7 +22,6 @@ body {
     -webkit-animation-duration: .3s;
     animation-duration: .3s;
 }
-
 
 .anim-fade-out {
     -webkit-animation-name: fadeOut;
@@ -115,7 +119,10 @@ body {
     padding-right: 50px;
 }
 
-.hello-head .right-part .your-name {color: #6a6f82;font-size: 14px;}
+.hello-head .right-part .your-name {
+    color: #6a6f82;
+    font-size: 14px;
+}
 
 .hello-head .right-part .your-name > i {
     color: #2196f3;
@@ -251,6 +258,7 @@ body {
 }
 
 .category-list .list-head .list-actions {
+    font-size: 14px;
 }
 
 .category-list .list-head .list-actions > span {
@@ -258,7 +266,8 @@ body {
     transition: color 0.15s ease-in-out;
 }
 
-.category-list .list-head .list-actions > span:not(:last-child) {}
+.category-list .list-head .list-actions > span:not(:last-child) {
+}
 
 .category-list .list-head .list-actions > span:hover {
     color: #2196f3;
@@ -332,7 +341,8 @@ body {
 }
 
 /* work-area */
-.work-area {}
+.work-area {
+}
 
 .work-area .work-table {
     padding-right: 4px;
@@ -439,6 +449,98 @@ body {
 .notify-layer .notify-item p {
     padding: 15px 20px;
     margin: 0;
+}
+
+/* Dialog Layer */
+.dialog-layer {
+    position: absolute;
+    display: flex;
+    z-index: 1000;
+    background-color: rgba(86, 86, 86, 0.11);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-items: center;
+}
+
+.dialog-layer .dialog-inner {
+    display: flex;
+    flex-direction: column;
+    width: 430px;
+    padding: 15px 0;
+    border-radius: 2px;
+    background-color: #fff;
+    box-shadow: 0 5px 20px rgba(0,0,0,.07);
+    margin: 0 auto;
+}
+
+.dialog-layer .dialog-title {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    padding: 10px 30px 15px 30px;
+    border-bottom: 0 solid #f6f6f6;
+    font-size: 16px;
+    color: #333;
+}
+
+.dialog-layer .dialog-title .right-btn {
+    width: 25px;
+    text-align: center;
+    cursor: pointer;
+    color: #696969;
+}
+
+.dialog-layer .dialog-title .right-btn:hover {
+    color: #03A9F4;
+}
+
+.dialog-layer .dialog-title .right-btn > i {
+    line-height: 25px;
+}
+
+.dialog-layer .dialog-content {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 10px 30px 10px 30px;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #707070;
+    overflow-x: hidden;
+    overflow-y: auto;
+    max-height: 150px;
+    word-break: break-all;
+}
+
+.dialog-layer .dialog-bottom {
+    display: flex;
+    padding: 15px 25px 0 25px;
+    -webkit-box-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: center;
+    align-items: center;
+    color: #575757;
+}
+
+.dialog-layer .dialog-bottom .dialog-btn {
+    color: #2196f3;
+    font-weight: 500;
+    cursor: pointer;
+    border: 0;
+    text-align: center;
+    border-radius: 2px;
+    padding: 6px 13px;
+}
+
+.dialog-layer .dialog-bottom .dialog-btn:hover {
+    background-color: #f6f6f6;
+}
+
+.dialog-layer .dialog-bottom .dialog-btn:not(first-child) {
+    margin-left: 5px;
 }
 
 /* loader */
