--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>書記 Online</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="referrer" content="always">
     <meta name="renderer" content="webkit">
     <link href="/img/ingteresting.png" rel="shortcut icon" type="image/x-icon">
@@ -23,7 +24,7 @@
         <div class="loading-text"></div>
     </div>
     
-    <!-- mainScreen -->
+    <!-- Main -->
     <div class="main-wrap" style="display: none">
         <div class="main">
             
@@ -45,13 +46,28 @@
             <div class="main-category-list-wrap"></div>
         </div>
     </div>
-    <!-- WorkArea -->
-    <div class="work-area" id="workArea" style="display: none">
-        <div class="work-table" id="workTable"></div>
-        <div class="floaters">
-            <div class="work-actions">
-                <span class="action-item" onclick="app.work.saveCurrent()"><i class="zmdi zmdi-save"></i> 保存</span>
-                <span class="action-item" onclick="app.work.exitWork()"><i class="zmdi zmdi-arrow-back"></i> 离开</span>
+    
+    <!-- Editor -->
+    <div class="editor-wrap" style="display: none">
+        <div class="editor">
+            <form class="editor-inserter" onsubmit="alert('下一本书');return false;">
+                <div class="numbering-controller left-part">
+                    <span class="current-numbring">0</span>
+                    <button type="button" class="pre-book-btn"></button>
+                </div>
+                <div class="fields-inputs">
+                    <input type="text" class="form-control" spellcheck="false" autocomplete="off" name="name" placeholder="书名" />
+                    <input type="text" class="form-control" spellcheck="false" autocomplete="off" name="press" placeholder="出版社" />
+                    <input type="text" class="form-control" spellcheck="false" autocomplete="off" name="remarks" placeholder="备注" />
+                </div>
+                <div class="numbering-controller right-part">
+                    <button type="submit" class="nxt-book-btn"></button>
+                </div>
+            </form>
+            <div class="editor-book-list">
+                <div class="list-content">
+                
+                </div>
             </div>
         </div>
     </div>
