--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -33,7 +33,8 @@
                     <span class="project-name">書記</span><span class="version-info">Online</span>
                 </div>
                 <div class="head-actions">
-                    <span class="user-name"><i class="zmdi zmdi-account"></i><span class="action-text"></span></span>
+                    <span class="user-name"><i class="zmdi zmdi-account"></i><span class="user-name-text"></span></span>
+                    <span class="book-total"><i class="zmdi zmdi-mood"></i>战绩：<span class="book-total-text"></span></span>
                 </div>
             </div>
             
