--- a/public/css/app.css
+++ b/public/css/app.css
@@ -548,12 +548,21 @@ a {
     flex-basis: 50px;
 }
 
-.editor .editor-inserter .current-numbring {
-    margin-right: 15px;
+.editor .editor-inserter .current-book-info {
+    margin-right: 10px;
     font-size: 100%;
     color: #2196F3;
+    font-weight: bold;
     white-space: nowrap;
     word-break: break-all;
+}
+
+.editor .editor-inserter .current-book-info .numbering {
+    background: transparent;
+    border: 0;
+    display: inline-block;
+    width: 50px;
+    overflow: hidden;
 }
 
 .editor .editor-inserter .pre-book-btn,
@@ -630,6 +639,44 @@ a {
     overflow-y: scroll;
     overflow-x: hidden;
 }
+
+.editor .editor-book-list .list-content {}
+
+.editor .editor-book-list .list-content .list-item {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid #f5f5f5;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.15s ease;
+}
+
+.editor .editor-book-list .list-content .list-item:hover {
+    background: #f7f7f7;
+}
+
+.editor .editor-book-list .list-content .list-item > span {
+    flex: 1;
+    padding: 10px 0;
+    padding-left: 25px;
+}
+
+.editor .editor-book-list .list-content .list-item > span:first-child {
+    flex: initial;
+    flex-basis: 165px;
+    padding-left: 30px;
+}
+
+.editor .editor-book-list .list-content .list-item > span:last-child {
+    padding-right: 30px;
+    flex: 1.2;
+}
+
+.editor .editor-book-list .list-content .list-item > span.numbering {
+    cursor: pointer;
+}
+
+.editor .editor-book-list .list-content .list-item > span.numbering:hover {color: #00BCD4;}
 
 /* work-area */
 .work-area {
