app.editor Record Modified

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -676,7 +676,7 @@ a {
     cursor: pointer;
 }
 
-.editor .editor-book-list .list-content .list-item > span.numbering:hover {color: #00BCD4;}
+.editor .editor-book-list .list-content .list-item > span.numbering:hover {color: #2196f3;}
 
 /* work-area */
 .work-area {
