app.editor toolbar

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -51,6 +51,15 @@
     <!-- Editor -->
     <div class="editor-wrap anim-fade-in" style="display: none">
         <div class="editor">
+            <div class="editor-tool-bar">
+                <div class="left-part">
+                    <span class="title">编辑</span>
+                </div>
+                <div class="right-part">
+                    <span class="action-item" data-toggle="exit"><i class="zmdi zmdi-arrow-left"></i> 返回</span>
+                    <span class="action-item" data-toggle="upload"><i class="zmdi zmdi-upload"></i> 上传</span>
+                </div>
+            </div>
             <form class="editor-inserter" onsubmit="return false;">
                 <div class="numbering-controller left-part">
                     <span class="current-book-info">
