--- a/public/css/app.css
+++ b/public/css/app.css
@@ -323,6 +323,10 @@ a {
     transition: color 0.15s ease-in-out;
 }
 
+.category-list .list-head .list-actions > span i {
+    margin-right: 5px;
+}
+
 .category-list .list-head .list-actions > span:not(:last-child) {
     margin-right: 15px;
     border-right: 1px solid #EEE;
@@ -394,7 +398,7 @@ a {
     height: calc(100% - 10px - 1px);
     top: 5px;
     left: 0px;
-    background: #8acbff;
+    background: #90cdff;
 }
 
 .category-list .list-content .item.is-completed .item-head:before {
@@ -402,7 +406,7 @@ a {
     font-family: 'Material-Design-Iconic-Font';
     display: inline-block;
     margin-right: 15px;
-    color: #00BCD4;
+    color: #ffc107;
 }
 
 .category-list .list-loading {
@@ -525,12 +529,57 @@ a {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
 }
 
+.editor .editor-tool-bar {
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    height: 40px;
+    flex-direction: row;
+    box-shadow: 0 1px 0px #F2F2F2;
+}
+
+.editor .editor-tool-bar .left-part {
+    flex: 1;
+}
+
+.editor .editor-tool-bar .right-part {
+    flex: 1;
+    text-align: right;
+}
+
+.editor .editor-tool-bar .action-item {
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 25px;
+    cursor: pointer;
+    user-select: none;
+    transition: background 0.15s ease;
+}
+
+.editor .editor-tool-bar .action-item:hover {
+    color: #2196F3;
+    background: #f7f7f7;
+}
+
+.editor .editor-tool-bar .action-item > i {
+    margin-right: 10px;
+}
+
+.editor .editor-tool-bar .title {
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 25px;
+    color: #2196F3;
+}
+
 .editor .editor-inserter {
     display: flex;
     flex-direction: row;
     line-height: 35px;
     padding: 15px 30px;
-    box-shadow: 0 1px 2px rgba(0,0,0,.075);
+    box-shadow: 0 1px 0px #F3F3F3;
 }
 
 .editor .editor-inserter .numbering-controller {
@@ -543,7 +592,9 @@ a {
     vertical-align: middle;
 }
 
-.editor .editor-inserter .numbering-controller.left-part {flex-basis: auto;}
+.editor .editor-inserter .numbering-controller.left-part {
+    flex-basis: auto;
+}
 
 .editor .editor-inserter .numbering-controller.right-part {
     flex-basis: 50px;
@@ -571,20 +622,21 @@ a {
     width: 50px;
     margin: 0 5px;
     cursor: pointer;
-    transition: .3s all;
+    transition: all .3s ease;
     border-radius: 2px;
     border: 0;
     background: #FFF;
     line-height: initial;
     outline: none;
+    border: 1px solid #f3f3f3;
 }
 
 .editor .editor-inserter .pre-book-btn:hover,
 .editor .editor-inserter .nxt-book-btn:hover,
 .editor .editor-inserter .pre-book-btn:focus,
 .editor .editor-inserter .nxt-book-btn:focus {
-    background: #2196F3;
-    color: #FFF;
+    color: #2196F3;
+    border: 1px solid #2196F3;
 }
 
 .editor .editor-inserter .pre-book-btn:active,
@@ -635,7 +687,7 @@ a {
 }
 
 .editor .editor-book-list {
-    height: calc(100% - 65px);
+    height: calc(100% - 65px - 40px);
     width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
