--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>書記 Online</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">-->
     <meta name="referrer" content="always">
     <meta name="renderer" content="webkit">
     <link href="/img/ingteresting.png" rel="shortcut icon" type="image/x-icon">
@@ -13,6 +13,7 @@
     <link href="/css/material-design-iconic-font.min.css" rel="stylesheet">
     <script src="/js/jquery.min.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/app-help.js"></script>
     <!--[if lt IE 9]>你正在使用的浏览器版本过低，请<a href="/upgrade-browser.html"><strong>升级你的浏览器</strong></a>，获得最佳的浏览体验！<![endif]-->
 </head>
 <body>
@@ -57,6 +58,7 @@
                 </div>
                 <div class="right-part">
                     <span class="action-item" data-toggle="exit"><i class="zmdi zmdi-arrow-left"></i> 返回</span>
+                    <span class="action-item" data-app-help="editor"><i class="zmdi zmdi-help"></i> 帮助</span>
                     <span class="action-item" data-toggle="upload"><i class="zmdi zmdi-upload"></i> 上传</span>
                 </div>
             </div>
