"帮助" to "使用方法"

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -58,7 +58,7 @@
                 </div>
                 <div class="right-part">
                     <span class="action-item" data-toggle="exit"><i class="zmdi zmdi-arrow-left"></i> 返回</span>
-                    <span class="action-item" data-app-help="editor"><i class="zmdi zmdi-help"></i> 帮助</span>
+                    <span class="action-item" data-app-help="editor"><i class="zmdi zmdi-help"></i> 使用方法</span>
                     <span class="action-item" data-toggle="upload"><i class="zmdi zmdi-upload"></i> 上传</span>
                 </div>
             </div>
