--- a/public/css/app.css
+++ b/public/css/app.css
@@ -367,7 +367,7 @@ a {
 }
 
 .category-list .list-content .item:hover {
-    background: #fbfbfbfb;
+    background: #fafafa;
 }
 
 .category-list .list-content .item .item-head {
@@ -1129,7 +1129,7 @@ a {
 .help-layer-note {
     z-index: 998;
     position: absolute;
-    background: #ffffffd6;
+    background: rgba(255, 255, 255, 0.84);
     padding: 12px 20px;
     max-width: 240px;
     margin-left: -7px;
