--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -59,6 +59,7 @@
                 <div class="right-part">
                     <span class="action-item" data-toggle="exit"><i class="zmdi zmdi-arrow-left"></i> 返回</span>
                     <span class="action-item" data-app-help="editor"><i class="zmdi zmdi-help"></i> 说明</span>
+                    <span class="action-item" data-toggle="updateBooks"><i class="zmdi zmdi-refresh"></i> 更新</span>
                     <span class="action-item" data-toggle="upload"><i class="zmdi zmdi-upload"></i> 上传</span>
                 </div>
             </div>
